# semanticpy

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.deployment.txt  requirements.development.txt  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
source/semanticpy/: __init__.py  errors.py  logging.py  node.py
source/semanticpy/enumerations/: __init__.py
source/semanticpy/profiles/: linked-art-from-context.json  linked-art.json  sample.json
source/semanticpy/types/: __init__.py  attributed.py  dictionary.py  namespace.py  node.py
tests/: conftest.py  test_configuration_appending_mode.py  test_configuration_overwrite_mode.py  test_initialization.py  test_node.py  test_nodes.py  test_overwrite_mode.py  test_record_create.py  test_record_load.py  test_record_save.py
tests/data/examples/: merged-specified-properties.json  merged.json  object-extended.json  object.json  saved-extended.json  saved.json
tests/data/node/json/: compact.json  indented.json
