[metadata]
name = semanticpy
version = file: source/semanticpy/VERSION.txt
description = Simplify creating linked data documents using Python classes and properties.
long_description = file: README.md, CHANGELOG.txt
keywords = semantic, linked data, LOD, JSON-LD, RDF
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
include_package_data = True
package_dir=
    =source
packages=find:
install_requires =
    

[options.packages.find]
where=source
